--- a/style.css
+++ b/style.css
@@ -70,7 +70,10 @@ button {
     border: 4px solid lightpink;             
     border-radius: 5px;          
     cursor: pointer;  
-      
+}
+
+button:hover {
+    background-color: lightpink;
 }
 
 .right-center {
